[tool.poetry]
name = "nua-runtime"
version = "0.4.74"
description = "Nua runtime"
authors = [
    "Stefane Fermigier <sf@abilian.com>",
    "Jerome Dumonteil <jd@abilian.com>",
]
license = "AGPL"
readme = "README.md"
packages = [
    { include = "nua", from = "src" },
]

[tool.poetry.scripts]
nua_build_setup_app = "nua.runtime.scripts.nua_build_setup_app:main"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^65.5.0"
packaging = "^22.0"
nua-lib = { path = "../nua-lib/", develop = true }
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
abilian-devtools = "*"
nox = "*"
types-setuptools = "^65.5.0.3"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*distutils package:DeprecationWarning",
    "ignore::DeprecationWarning",
]

[tool.ruff]
extend-ignore = [
    "F401",
    "E501",
    "F841",
]

[tool.deptry]
exclude = [
    ".tox",
    ".nox",
    "tests",
    "sandbox",
    "doc",
    "scripts",
    "noxfile.py",
]
ignore_obsolete = [
    "setuptools",
]
ignore_missing = [
    "mariadb",
    "psycopg2",
]
ignore_transitive = []

[tool.pyright]
exclude = [
    ".tox",
    ".nox",
    "tests",
    "sandbox",
    "doc",
    "scripts",
    "noxfile.py",
]

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
