[tool.poetry]
name = "NUA"
version = "0.1.0"
description = "Simple cloud platform (PaaS) for developers and sysadmins."
authors = ["Abilian SAS"]
license = "GPL"

packages = [{ include = "nua", from = "src" }]
include = ["src/**/*"]


[tool.poetry.scripts]
nua = "nua.cli.main:main"
nua-agent = "nua.agent.main:main"
#nuad = 'nua.cli.nuad:main'
#nua-build = 'nua.cli.build.main:main'


[tool.poetry.dependencies]
python = "^3.8"

# CLI
fire = "^0.4.0"
rich = "^10.3.0"

# Debug
devtools = "^0"

SQLAlchemy = "^1.4.15"

# Web (not used yet)
# starlette = "^0.14.2"
# gunicorn = "*"
# aiofiles = "^0.7.0"
#pypugjs = "^5.9.9"
#blinker = "^1.4"

# Not used yet
#pyinfra = "^1.4.4"
#shortuuid = "^1.0.1"
#
#psycopg2-binary = "*"
#
#BeautifulSoup4 = "^4.9.1"
#bcrypt = "^3.2.0"
#bleach = "*"
#email-validator = "^1.1.1"
#feedgen = "^0.9.0"
#loguru = "^0.5"
#lxml = "^4.5.1"
#markdown = "*"
#python-dotenv = "*"
#python-magic = "*"
#pytz = "^2020.1"
#toolz = "*"
#wtforms = "*"


[tool.poetry.dev-dependencies]
# Lint / checks
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-mutable = "*"
flake8-pytest = "*"
flake8-super-call = "*"
flake8-tidy-imports = "*"
mastool = "*"
mypy = "*"
black = { version = "*", allow-prereleases = true }

# Testing
pytest = "*"
coverage = "*"
pytest-cov = "^2.9.0"
pip-check-reqs = "^2.1.1"
typeguard = "^2.9.1"

# Run in dev mode
# honcho = "*"

# Devops
# invoke = "^1.4.1"

[tool.ruff]
extend-exclude = [
    "src",
]

[tool.isort]
profile = "black"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
