[tool.poetry]
name = "nua_build"
version = "0.4.4"
description = "Some nua_build implementation with Typer"
authors = ["Stefane Fermigier <sf@abilian.com>", "Jerome Dumonteil <jd@abilian.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.scripts]
nua-build = "nua_build.main:app"
nua_build_self_setup = "nua_build.scripts.nuad_self_setup:main"
nua_build_setup_app = "nua_build.scripts.nua_build_setup_app:main"

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.0"
psutil = "^5.9.1"
typer = {extras = ["all"], version = "^0.6"}
rich = "^12.4.4"
docker = "^6.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
# Linting
flake8 = "^4.0.1"
flake8-aaa = "0.12.2"
flake8-bandit = "3.0.0"
flake8-bugbear = "^22.4.25"
flake8-cognitive-complexity = "0.1.0"
flake8-comprehensions = "^3.10.0"
flake8-datetimez = "20.10.0"
flake8-functions = "0.0.7"
flake8-mutable = "^1.2.0"
flake8-pytest = "^1.3"
flake8-simplify = "0.19.2"
flake8-super = "0.1.3"
flake8-super-call = "^1.0.0"
flake8-tidy-imports = "^4.8.0"
flake8-tuple = "0.4.1"
bandit = "^1.7.4"
pep8-naming = "^0.13.0"
mastool = "^0.1.3"
# mccabe = "^0.7"

# Formatting
isort = "^5.10.1"
black = "^22.3.0"
docformatter = "^1.4"

# Typechecking
mypy = "^0.961"
types-toml = "^0.10.7"
paramiko = "^2.11.0"

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*distutils package:DeprecationWarning", "ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
