[tool.poetry]
name = "nua_build"
version = "0.4.26"
description = "Some nua_build implementation with Typer"
authors = ["Stefane Fermigier <sf@abilian.com>", "Jerome Dumonteil <jd@abilian.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.scripts]
nua-build = "nua_build.main:app"
nua_build_self_setup = "nua_build.scripts.nuad_self_setup:main"
nua_build_setup_app = "nua_build.scripts.nua_build_setup_app:main"
nua_test_replace_domain = "nua_build.scripts.test_replace_domain:main"

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^65.5.0"

tomli = "^2.0"
typer = {extras = ["all"], version = "^0.6"}
rich = "^12.4.4"
docker = "^6.0"
jinja2 = "^3.1.2"

# XXX: Not needed ??
# psutil = "^5.9.1"

[tool.poetry.dev-dependencies]
# XXX: why is this needed here ?
paramiko = "^2.11.0"

# Testing
pytest = "^7"
pytest-xdist = "*"

# Linting
flake8 = "^5"
flake8-aaa = "*"
flake8-bandit = "*"
flake8-bugbear = "*"
flake8-cognitive-complexity = "*"
flake8-comprehensions = "*"
flake8-datetimez = "*"
flake8-functions = "*"
flake8-mutable = "*"
flake8-pytest = "*"
flake8-simplify = "*"
flake8-super = "*"
flake8-super-call = "*"
flake8-tidy-imports = "*"
flake8-tuple = "*"
pep8-naming = "*"
# bandit = "*"
# mastool = "^0.1.3"
# mccabe = "^0.7"

# Formatting
isort = "^5.10.1"
black = "^22.3.0"
docformatter = "^1.4"

# Typechecking
mypy = "^0.961"
types-toml = "^0.10.7"

# More checks
vulture = "^2.6"
deptry = "^0.6.3"
ruff = "^0.0.100"

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*distutils package:DeprecationWarning", "ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
#    "E711",  # comparison to None should be 'if cond is not None:'
#    "E501",  # line too long
#    "E999",  # Syntax error, probably because ruff doesn't support the match statement
#    "F401",  # 'module' imported but unused
]

[tool.deptry]
exclude = [
    '.tox', 'tests', 'sandbox', 'doc', 'scripts'
]
ignore_obsolete = [
    "setuptools",
]
ignore_missing = [
    "mariadb",
    "psycopg2",
]
ignore_transitive = [
]
