[tool.poetry]
name = "nua_cli"
version = "0.1.0"
description = "Some nua_cli implementation with Typer"
authors = ["Jerome Dumonteil <jd@abilian.com>"]
readme = "README.md"

[tool.poetry.scripts]
nua = "nua_cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.4.1"}
py = "^1.11.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
