[tool.poetry]
name = "nua_orchestrator"
version = "0.1.0"
description = "Nua orchestrator is a daemon managing Nua commands and services."
authors = ["Jerome Dumonteil <jd@abilian.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
zmq = "^0.0.0"
tinyrpc = "^1.1.4"
psutil = "^5.9.0"
SQLAlchemy-serializer = "^1.4.1"
toml = "^0.10.2"
SQLAlchemy = "^1.4.36"
py = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
