[tool.poetry]
name = "nua_orchestrator"
version = "0.4.27"
description = "Nua orchestrator local implementation for Nua v0."
authors = ["Jerome Dumonteil <jd@abilian.com>"]
license = "AGPL"
readme = "README.md"

[tool.poetry.scripts]
nua = "nua_orchestrator.main:app"
nua-bootstrap = "nua_orchestrator.scripts.bootstrap:main"
nua-pg-pwd = "nua_orchestrator.scripts.set_pg_pwd:app"
nua-mariadb-init = "nua_orchestrator.scripts.mariadb_restore:app"
nua-print-instances = "nua_orchestrator.scripts.print_instances:main"
nua-print-volumes = "nua_orchestrator.scripts.print_mounted_volumes:main"
nua-print-ports = "nua_orchestrator.scripts.print_used_ports:main"
nua-deactivate-all = "nua_orchestrator.scripts.deactivate_all_instances:main"
nua-docker-list-all = "nua_orchestrator.scripts.docker_list_all:main"
nua-docker-rm-all = "nua_orchestrator.scripts.docker_remove_all:main"
nua_test_replace_domain = "nua_orchestrator.scripts.test_replace_domain:main"
nua_test_services = "nua_orchestrator.service:test"

[tool.poetry.dependencies]
python = "^3.10"

# Databases
SQLAlchemy-serializer = "^1.4.1"
SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"

# Other deps
paramiko = "^2.11.0"
tomli = "^2.0"
docker = "^6.0"
fabric = "^2.7.0"
typer = {extras = ["all"], version = "^0.6"}
rich = "^12.4.4"
jinja2 = "^3.1.2"
python-dotenv = "^0.20.0"
wheel = "^0.37.1"

# XXX: are these really needed ? Deptry says no.
# psutil = "^5.9.1"
# py = "^1.11.0"
# mariadb = "^1.1.4"


[tool.poetry.dev-dependencies]
# Testing
pytest = "^7"
pytest-xdist = "*"

# Linting
flake8 = "^5"
flake8-aaa = "*"
flake8-bandit = "*"
flake8-bugbear = "*"
flake8-cognitive-complexity = "*"
flake8-comprehensions = "*"
flake8-datetimez = "*"
flake8-functions = "*"
flake8-mutable = "*"
flake8-pytest = "*"
flake8-simplify = "*"
flake8-super = "*"
flake8-super-call = "*"
flake8-tidy-imports = "*"
flake8-tuple = "*"
pep8-naming = "*"
# bandit = "*"
# mastool = "^0.1.3"
# mccabe = "^0.7"

# Formatting
isort = "^5.10.1"
black = "^22.3.0"
docformatter = "^1.4"

# Typechecking
mypy = "^0.961"
types-toml = "^0.10.7"

# More checks
vulture = "^2.6"
deptry = "^0.6.3"
ruff = "^0.0.100"

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*distutils package:DeprecationWarning", "ignore::DeprecationWarning"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
    # FIXME: this is easy to test
    "E501",  # line too long
    "F401",  # 'module' imported but unused
]

[tool.deptry]
exclude = [
    '.tox', 'tests', 'sandbox', 'doc', 'scripts'
]
ignore_obsolete = [
    "setuptools",
    "wheel",
]
ignore_missing = []
ignore_transitive = [
    "packaging",
    "requests",
]
