[tool.poetry]
name = "flask_mariadb_docker_wheel"
version = "0.1.0"
description = "Flask test with mariadb-docker"
authors = ["Jerome Dumonteil <jd@abilian.com>"]
license = "MIT"

[tool.poetry.scripts]
init-db = "flask_mariadb_docker_wheel.init_db:main"


[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^65.4.1"  # for mariadb, but still error, see:
# (https://github.com/pypa/packaging-problems/issues/573)
# (lets make a wheel)
gunicorn = "^20.1.0"
Flask = "^2.1.3"
Flask-WTF = "^1.0"
Jinja2 = "^3.1.2"
# build will require: apt-get install libmariadb3 libmariadb-dev mariadb-client
mariadb = "^1.1.5"

[tool.poetry.dev-dependencies]
abilian-devtools = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
