[tool.poetry]
name = "redis_cache_test"
version = "1.0"
description = "Redis cache test"
authors = ["Jerome Dumonteil <jd@abilian.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
redis = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
