[tool.poetry]
name = "flask_upload_tmpfs"
version = "0.3.0"
description = "Nua test upload with container tmpfs"
authors = ["Jerome Dumonteil <jd@abilian.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
Flask = "^2.1.3"
Flask-WTF = "^1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
