[tool.poetry]
name = "flask_sqla_sqlite_bind"
version = "0.1.1"
description = "Flask test with postgres"
authors = ["Jerome Dumonteil <jd@abilian.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
Flask = "^2.1.3"
Flask-WTF = "^1.0"
Jinja2 = "^3.1.2"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.40"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
